# ai-health-coach

./: .gitignore  .semgrepignore  CLAUDE.md  HANDOFF.md  README.md  project.yml
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  meld.db  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 0d5d37a34c9e_add_ml_feature_values_and_ml_feature_.py  1578831d1826_add_ml_insight_candidates_and_ml_.py  490671839de6_add_ml_baselines_ml_change_points_ml_.py  5f2e8a4c1d93_add_is_synthetic_to_raw_tables.py  6edcb0a00c24_initial_schema_snapshot.py  80b80e94d52c_add_custom_goal_text_to_users.py  a4e9c2b71f08_tenant_tables_fk_followup.py  a7c9f2b5e483_add_ml_synth_runs.py  b384bb88217f_merge_onboarding_complete_head_with_ml_.py  b3d7f1e9a245_add_l3_l4_tables.py  b425b63b152f_add_ml_drift_results.py  b5c8f3e29a04_add_oura_user_id_to_oura_tokens.py  c0518b5194eb_add_auth_tables_and_user_fks.py  c4e8a2f1b357_add_ml_models.py  d1a8e3f4b907_add_waitlist_signups.py  d5f1c3a2b789_add_cohort_tables.py  d8e4c1a72b39_add_password_to_peloton_tokens.py  e2b4c9a31f6d_oura_token_last_synced_at.py  e6a2b4c8d901_add_experiment_tables.py  e9c3f7b285a1_remove_default_placeholder_user.py  f3a1d8c92e05_add_onboarding_complete_to_users.py  f3d7a9b25e81_add_user_mascot_state.py  f7b3d2e1a456_add_training_runs.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/core/: apple.py  constants.py  encryption.py  http.py  pem.py  secrets.py  security.py  time.py
backend/app/models/: __init__.py  chat.py  correlation.py  garmin.py  health.py  mascot.py  meal.py  ml_baselines.py  ml_cohorts.py  ml_discovery.py  ml_drift.py  ml_experiments.py  ml_features.py  ml_insights.py  ml_models.py  ml_synth.py  ml_training_runs.py  notification.py  peloton.py  refresh_token.py  user.py  waitlist.py
backend/app/routers/: auth.py  auth_apple.py  coach.py  experiments.py  garmin_auth.py  health.py  insights.py  mascot.py  meals.py  ml_ops.py  ml_ops_helpers.py  notifications.py  ops.py  peloton_auth.py  privacy.py  user.py  waitlist.py  webhooks.py
backend/app/schemas/: health.py  meal.py
backend/app/scripts/: claim_default_user.py  reconcile_history.py
backend/app/services/: anti_fatigue.py  apns.py  claude.py  coach_engine.py  content_blocks.py  correlation_engine.py  data_reconciliation.py  food_recognition.py  food_search.py  garmin.py  garmin_sync.py  health_data.py  literature.py  notification_content.py  notification_engine.py  notification_media.py  notification_templates.py  offline_eval.py  openfoodfacts.py  oura.py  oura_sync.py  oura_webhooks.py  peloton.py  peloton_sync.py  usda.py  waitlist_notifier.py
backend/app/tasks/: scheduler.py
backend/ml/: __init__.py  api.py  config.py
backend/ml/cohorts/: __init__.py  anonymize.py  cluster.py
backend/ml/discovery/: __init__.py  apte.py  associations.py  baselines.py  causal.py  granger.py
backend/ml/features/: __init__.py  builders.py  catalog.py  store.py
backend/ml/forecasting/: __init__.py  anomaly.py  residuals.py
backend/ml/mlops/: __init__.py  alerts.py  (+1 more)
backend/tests/: test_admin_gate.py  test_anti_fatigue.py  test_api_contracts.py  test_apple_jwt_verify.py  test_apple_verify.py  test_audit_safety_paths.py  test_auth.py  test_auth_oura_callback.py  test_auth_routes.py  test_coach_engine.py  test_content_blocks.py  test_correlation_engine.py  test_create_refresh_token_naive.py  test_data_parity.py  test_encryption.py  test_food_image_downsize.py  test_health_canary.py  test_health_data.py  test_ml_ops.py  test_ops.py  test_oura_sync.py  test_oura_webhooks.py  test_peloton_auth.py  test_peloton_sync.py  test_refresh_token_rotation.py  test_safety_check.py  test_scheduler_iter_active_users.py  test_secrets_validation.py  test_user_time.py  test_waitlist_notifier.py  test_webhooks_oura_routing.py
(+325 files in other folders)
