[project]
name = "meld-backend"
version = "0.1.0"
description = "Meld Health Coach — Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "anthropic>=0.49.0",
    "httpx[http2]>=0.28.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "apscheduler>=3.10.0",
    "aiosqlite>=0.21.0",
    "sse-starlette>=2.2.0",
    "pillow>=11.0.0",
    "garminconnect>=0.2.0",
    "pylotoncycle>=0.9.1",
    "textstat>=0.7.0",
    "pyjwt[crypto]>=2.10.1",
    "slowapi>=0.1.9",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]
